[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teiko-take-home"
version = "0.1.0"
description = "Take-home project for loading immune cell count data into SQLite and analyzing it with a dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "plotly>=6.0",
    "scipy>=1.13",
    "sqlalchemy>=2.0",
    "streamlit>=1.44",
]

[tool.setuptools]
py-modules = []
